--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css"></head>
+<link rel="stylesheet" href="https://krisemm.github.io/krisemm-portfolio/styles.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+<script src="https://krisemm.github.io/krisemm-portfolio/runtime.js" defer></script><script src="https://krisemm.github.io/krisemm-portfolio/polyfills.js" defer></script><script src="https://krisemm.github.io/krisemm-portfolio/vendor.js" defer></script><script src="https://krisemm.github.io/krisemm-portfolio/main.js" defer></script></body>
 
 </html>
